<resources>
    <string name="app_name">燃点</string>
    <string name="action_back_btn">返回</string>
    <string name="gym_tab">健身</string>
    <string name="yoga_tab">瑜伽</string>
    <string name="default_tab">首页</string>
    <string name="coach_tab">教练</string>
    <string name="order_tab">订单</string>
    <string name="personal_tab">我的</string>
    <string name="order_now">立即预约</string>
    <string name="support_change_order">支持改约</string>
    <string name="order_again">再次预约</string>
    <string name="my_order">我的订单</string>
    <string name="my_coupon">我的优惠券</string>
    <string name="about_us">关于我们</string>
    <string name="feedback">意见反馈</string>
    <string name="about_class">课程简介</string>
    <string name="about_coach">教练简介</string>
    <string name="teaching_class">所教课程</string>
    <string name="order_detail">订单详情</string>
    <string name="order_detail_comment">我的评价：</string>
    <string name="kefu_phone">客服电话：4006705210</string>
    <string name="order_btn">+ 预约下单</string>
    <string name="total_time">总时间：0 分钟</string>
    <string name="total_cost">总金额：0 元</string>
    <string name="choose_course">请选择课程</string>
    <string name="chosen">教练＋课程已选</string>
    <string name="no_description">暂无简介</string>
    <string name="no_sport_found">暂无项目</string>
    <string name="order_info">订单内容</string>
    <string name="order_comment">欢迎评价</string>
    <string name="order_comment_tips">对本次课满意吗？给教练打个分吧</string>
    <string name="order_comment_left">剩余</string>
    <string name="word">个字</string>
    <string name="comment_hint">你的意见很重要，点评一下吧～（200字以内）</string>
    <string name="submit_comment">提交评价</string>
    <string name="randian_pay">然点付款</string>
    <string name="pay_success">您已成功付款</string>
    <string name="pay_fail">支付失败</string>
    <string name="pay_checking">支付结果确认中</string>
    <string name="paid">已支付</string>
    <string name="pay_checking_tips">您可以在订单列表查看支付情况</string>
    <string name="repay_tips">您可以在订单页查看并重新支付</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <!-- order detail -->
    <string name="order_no">订单编号：</string>
    <string name="sport_name">课程名称：</string>
    <string name="sport_duration">授课时间：</string>
    <string name="order_pay_fee">订单价格：</string>
    <string name="order_coupon_fee">优 惠 券：</string>
    <string name="order_off_fee">优惠立减：</string>
    <string name="order_real_pay">实际支付：</string>
    <string name="coach_name">教练名称：</string>
    <string name="sport_start_time">预约时间：</string>
    <string name="consignee_name">联 系 人：</string>
    <string name="consignee_mobile">电    话：</string>
    <string name="consignee_address">详细地址：</string>
    <string name="mark">备注信息：</string>
    <string name="mark_no">备注信息：无</string>
    <string name="minute">分钟</string>
    <string name="minute_">分</string>
    <string name="yuan">元</string>
    <string name="day">天</string>
    <string name="ren">人</string>
    <string name="qi">起</string>
    <string name="unit_price">单价：</string>
    <string name="unit">元/节</string>
    <string name="cash_unit">￥</string>
    <string name="origin_price">原价￥</string>
    <string name="name">教练：</string>
    <string name="duration">时间：</string>
    <string name="suggest_people">建议人数：</string>
    <string name="coupon_tips">使用说明：</string>
    <string name="coupon_date">有效期至：</string>
    <string name="coupon_available">已领取</string>
    <string name="coupon_outdate">已过期</string>
    <string name="coupon_used">已使用</string>
    <string name="coupon_left_date">距离过期还有：</string>
    <string name="coupon_scope">优惠券（任何课程）</string>
    <string name="coupon_choose">请选择优惠券</string>
    <string name="coupon_no_use">＋不使用</string>
    <string name="coupon_use">使用优惠券</string>
    <string name="coupon_go_use">去使用</string>
    <string name="coupon_outdate_tips">已过期，下次早点花掉哦</string>
    <string name="agreement">用户协议</string>
    <string name="feedback_btn">提交宝贵意见</string>
    <string name="feedback_title">告诉‘燃点’您想说的话，我们会尽快改进的哦</string>
    <string name="feedback_thanks">我们已收到您宝贵的意见，十分感谢您</string>
    <string name="service_distance">服务范围：北京市五环内及回龙观、天通苑、亦庄、通州城区、大兴城区的地铁沿线。</string>
    <string name="not_paied">未支付  请支付 </string>
    <string name="order_place">场地</string>
    <string name="order_time">时间</string>
    <string name="order_coach_level">教练等级：</string>
    <string name="order_confirm">确认</string>
    <string name="payit">+ 支付费用</string>
    <string name="start_app">进入燃点</string>
    <string name="login">登录</string>
    <string name="waiting">请稍等</string>
    <string name="wait_to_pay">等待付款</string>
    <string name="already_created">已创建</string>
    <string name="street_hint">小区/街道/写字楼</string>
    <string name="info_completed">信息填写完成!</string>
    <string name="address_hint">门牌号等详细信息</string>
    <string name="info_uncompleted">请填写信息</string>
    <string name="choose_coach">请选择教练</string>
    <string name="confirm_order">确认信息！</string>
    <string name="chosen_coach_already">已选择教练</string>
    <string name="tomorrow">明天</string>
    <string name="after_tomorrow">后天</string>
    <string name="choose_time_tips">请选择开始时间，橙色表示可预约</string>
    <string name="sunday">周日</string>
    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
    <string name="need_to_pay">需支付</string>
    <string name="use_coupon">＋确认使用</string>
    <string name="already_chosen_coupon">已选择优惠券</string>
    <string name="all_comment">全部评价</string>
    <string name="no_comment">教练暂无评论～</string>
    <string name="negative_comment">差评</string>
    <string name="moderate_comment">中评</string>
    <string name="positive_comment">好评</string>
    <string name="submit_comment_success">评价成功，感谢您的支持～</string>
    <string name="comment_now">立即评价</string>
    <string name="to_be_comment">待评价</string>
    <string name="click_to_pay">点此支付</string>
    <!-- form -->
    <string name="f_contact"> 联 系 人：</string>
    <string name="f_mobile"> 手 机 号：</string>
    <string name="f_street"> 街 道 名：</string>
    <string name="f_address">详细地址：</string>
    <string name="f_mark">备注信息：</string>
    <string name="mark_hint">（选填）</string>
    <string name="next_step">＋下一步</string>
    <string name="submit_order">提交订单</string>
    <string name="warning">注意：上课前2小时不能修改或退课</string>
    <string name="pay_collector">收款方：</string>
    <string name="company">北京燃点时代科技有限公司</string>
    <string name="goods">商  品：</string>
    <string name="phone">电  话：</string>
    <string name="address">地  址：</string>
    <string name="pay_now">立即支付</string>
    <string name="submitting">提交中...</string>
    <string name="star_not_chosen">请点击星星进行评分</string>
    <!-- error -->
    <string name="error_timeout">连接超时</string>
    <string name="error_unknown">未知错误</string>
    <string name="error_phone">手机号不正确</string>
    <string name="error_paramater">参数错误</string>
    <string name="coach_not_found">教练不存在</string>
    <string name="order_not_found">订单不存在</string>
    <string name="sport_not_chosen">请选择课程</string>
    <string name="error_no_street">请填写街道名</string>
    <string name="error_no_more">没有更多的内容了</string>
    <string name="error_wait">不着急，慢慢来比较快</string>
    <string name="error_verify_code">验证码不能为空</string>
    <string name="error_code_format">验证码格式错误</string>
    <string name="error_no_mobile">请填写联系人电话</string>
    <string name="error_no_contact">请填写联系人姓名</string>
    <string name="error_no_coupon">亲，你还没有优惠券哟</string>
    <string name="sport_not_found">活动不存在或已被删除</string>
    <string name="order_has_no_consumer">订单没有用户信息</string>
    <string name="error_server">啊欧，服务器开小差了，请稍后再试～</string>
    <string name="login_phone">手机号：</string>
    <string name="login_veri">验证码：</string>
    <string name="login_invite">邀请码：</string>
    <string name="login_send_message">发送短信</string>
    <string name="login_invite_tip">输入朋友的邀请码，双方都能领优惠券</string>
    <string name="login_voice_tip">如果收不到验证码，请使用</string>
    <string name="login_voice_code">语音验证码</string>
    <!-- footer -->
    <string name="get_more">点击加载更多</string>
    <string name="no_more">没有更多内容了</string>
    <!-- city -->
    <string name="beijing">北京</string>
</resources>
